# fast-amb

./: .gitignore  hfacts.cabal
amb/: ChangeLog.md  LICENSE  amb.cabal
amb/bench/: Main.hs
amb/src/Control/Monad/Logic/: Amb.hs  Run.hs
amb/test/: Tests.hs
amb/test/Control/Monad/Logic/Amb/: Test.hs
amb/test/Test/QuickCheck/: Law.hs
bench/: Main.hs
src/: Amb.hs  Fact.hs  Main.hs
src/Control/Logic/: Amb.hs
test/: Main.hs  Tests.hs
test/Control/Logic/Amb/: Test.hs
test/Control/Logic/Test/: Amb.hs
test/Test/QuickCheck/: Law.hs
